--- a/UTComputer/views/mainwindow.ui
+++ b/UTComputer/views/mainwindow.ui
@@ -34,6 +34,13 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
+     <item row="2" column="0">
+      <widget class="QPushButton" name="pushButtonOr">
+       <property name="text">
+        <string>OR</string>
+       </property>
+      </widget>
+     </item>
      <item row="4" column="2">
       <widget class="QPushButton" name="pushButton0">
        <property name="text">
@@ -104,6 +111,13 @@
        </property>
       </widget>
      </item>
+     <item row="4" column="0">
+      <widget class="QPushButton" name="pushButtonEval">
+       <property name="text">
+        <string>EVAL</string>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="1">
       <widget class="QPushButton" name="pushButtonRedo">
        <property name="text">
@@ -167,10 +181,24 @@
        </property>
       </widget>
      </item>
+     <item row="3" column="0">
+      <widget class="QPushButton" name="pushButtonNot">
+       <property name="text">
+        <string>NOT</string>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="5">
       <widget class="QPushButton" name="pushButtonDivide">
        <property name="text">
         <string>/</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QPushButton" name="pushButtonAnd">
+       <property name="text">
+        <string>AND</string>
        </property>
       </widget>
      </item>
@@ -216,42 +244,40 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QPushButton" name="pushButtonAnd">
-       <property name="text">
-        <string>AND</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QPushButton" name="pushButtonOr">
-       <property name="text">
-        <string>OR</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QPushButton" name="pushButtonNot">
-       <property name="text">
-        <string>NOT</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0">
-      <widget class="QPushButton" name="pushButtonEval">
-       <property name="text">
-        <string>EVAL</string>
-       </property>
-      </widget>
-     </item>
     </layout>
    </widget>
-   <widget class="QListView" name="listView">
+   <widget class="QLabel" name="welcomeUTComputer">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>10</y>
+      <width>201</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Bienvenue dans UTComputer !</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="errorLabel">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>40</y>
+      <width>271</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="listWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>291</width>
+      <width>281</width>
       <height>81</height>
      </rect>
     </property>
