--- a/UTComputer/views/programdialog.ui
+++ b/UTComputer/views/programdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>369</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>240</y>
+     <x>40</x>
+     <y>330</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -29,7 +29,7 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QListWidget" name="listWidget">
+  <widget class="QListWidget" name="listPrograms">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -47,6 +47,45 @@
      <width>241</width>
      <height>221</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="textEditNewProgName">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>250</y>
+     <width>131</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="placeholderText">
+    <string>Nom du programme</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonCreateProgram">
+   <property name="geometry">
+    <rect>
+     <x>145</x>
+     <y>245</y>
+     <width>141</width>
+     <height>38</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Créer programme</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="textEditError">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>280</y>
+     <width>271</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="readOnly">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
