--- a/UTComputer/views/atomdialog.ui
+++ b/UTComputer/views/atomdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>464</width>
-    <height>409</height>
+    <height>446</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>90</x>
-     <y>370</y>
+     <y>390</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -33,9 +33,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
+     <y>100</y>
      <width>251</width>
-     <height>251</height>
+     <height>181</height>
     </rect>
    </property>
   </widget>
@@ -43,9 +43,9 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>10</y>
+     <y>100</y>
      <width>171</width>
-     <height>79</height>
+     <height>81</height>
     </rect>
    </property>
   </widget>
@@ -53,33 +53,36 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>270</y>
-     <width>113</width>
+     <y>290</y>
+     <width>171</width>
      <height>23</height>
     </rect>
    </property>
    <property name="placeholderText">
-    <string>Nom de l'atome</string>
+    <string>Variable name</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonCreateAtom">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>265</y>
-     <width>113</width>
+     <x>322</x>
+     <y>285</y>
+     <width>131</width>
      <height>36</height>
     </rect>
    </property>
    <property name="text">
-    <string>Créer atome</string>
+    <string>Create Variable</string>
    </property>
   </widget>
   <widget class="QTextEdit" name="textEditError">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>300</y>
+     <y>330</y>
      <width>431</width>
      <height>51</height>
     </rect>
@@ -91,14 +94,77 @@
   <widget class="QLineEdit" name="lineEditNewAtomeValue">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>270</y>
-     <width>201</width>
+     <x>200</x>
+     <y>290</y>
+     <width>121</width>
      <height>23</height>
     </rect>
    </property>
    <property name="placeholderText">
-    <string>Valeur de l'atome</string>
+    <string>Value</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>30</y>
+     <width>351</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>A variable is a numeric value (integer, real or rational)</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>10</y>
+     <width>171</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Calibri</family>
+     <pointsize>18</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Adding Variables</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>80</y>
+     <width>101</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>List of variables</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>80</y>
+     <width>151</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Value of the variable</string>
    </property>
   </widget>
  </widget>
