--- a/UTComputer/views/mainwindow.ui
+++ b/UTComputer/views/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>737</width>
-    <height>551</height>
+    <height>603</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>200</y>
+      <y>250</y>
       <width>711</width>
       <height>21</height>
      </rect>
@@ -29,19 +29,27 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>201</width>
-      <height>20</height>
+      <width>291</width>
+      <height>41</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>Calibri</family>
+      <pointsize>18</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
     <property name="text">
-     <string>Bienvenue dans UTComputer !</string>
+     <string>Welcome in UTComputer calculator !</string>
     </property>
    </widget>
    <widget class="QListWidget" name="listWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
+      <y>95</y>
       <width>231</width>
       <height>121</height>
      </rect>
@@ -54,7 +62,7 @@
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>60</y>
+      <y>95</y>
       <width>471</width>
       <height>121</height>
      </rect>
@@ -63,11 +71,19 @@
    <widget class="QToolButton" name="toolButtonProgram">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>610</x>
       <y>10</y>
-      <width>81</width>
-      <height>22</height>
+      <width>111</width>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Calibri</family>
+      <pointsize>13</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="text">
      <string>Edit Programs</string>
@@ -76,11 +92,19 @@
    <widget class="QToolButton" name="toolButtonVariable">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>490</x>
       <y>10</y>
-      <width>81</width>
-      <height>22</height>
+      <width>111</width>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Calibri</family>
+      <pointsize>13</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="text">
      <string>Edit Variables</string>
@@ -90,7 +114,7 @@
     <property name="geometry">
      <rect>
       <x>440</x>
-      <y>250</y>
+      <y>305</y>
       <width>20</width>
       <height>211</height>
      </rect>
@@ -103,7 +127,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>250</y>
+      <y>305</y>
       <width>20</width>
       <height>171</height>
      </rect>
@@ -116,7 +140,7 @@
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>250</y>
+      <y>305</y>
       <width>20</width>
       <height>171</height>
      </rect>
@@ -129,7 +153,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>325</y>
+      <y>380</y>
       <width>161</width>
       <height>20</height>
      </rect>
@@ -142,7 +166,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>425</y>
+      <y>480</y>
       <width>421</width>
       <height>20</height>
      </rect>
@@ -151,11 +175,50 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>70</y>
+      <width>141</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Stack status</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>70</y>
+      <width>141</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Error messages</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>230</y>
+      <width>141</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Command line</string>
+    </property>
+   </widget>
    <widget class="QPushButton" name="pushButtonEnter">
     <property name="geometry">
      <rect>
       <x>586</x>
-      <y>441</y>
+      <y>496</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -175,7 +238,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>240</y>
+      <y>295</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -188,7 +251,7 @@
     <property name="geometry">
      <rect>
       <x>360</x>
-      <y>390</y>
+      <y>445</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -201,7 +264,7 @@
     <property name="geometry">
      <rect>
       <x>528</x>
-      <y>294</y>
+      <y>349</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -214,7 +277,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>390</y>
+      <y>445</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -227,7 +290,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>343</y>
+      <y>398</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -248,7 +311,7 @@
     <property name="geometry">
      <rect>
       <x>469</x>
-      <y>441</y>
+      <y>496</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -261,7 +324,7 @@
     <property name="geometry">
      <rect>
       <x>528</x>
-      <y>392</y>
+      <y>447</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -274,7 +337,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>240</y>
+      <y>295</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -287,7 +350,7 @@
     <property name="geometry">
      <rect>
       <x>586</x>
-      <y>343</y>
+      <y>398</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -300,7 +363,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>441</y>
+      <y>496</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -321,7 +384,7 @@
     <property name="geometry">
      <rect>
       <x>586</x>
-      <y>245</y>
+      <y>300</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -342,7 +405,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>390</y>
+      <y>445</y>
       <width>121</width>
       <height>40</height>
      </rect>
@@ -355,7 +418,7 @@
     <property name="geometry">
      <rect>
       <x>586</x>
-      <y>392</y>
+      <y>447</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -368,7 +431,7 @@
     <property name="geometry">
      <rect>
       <x>469</x>
-      <y>343</y>
+      <y>398</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -381,7 +444,7 @@
     <property name="geometry">
      <rect>
       <x>469</x>
-      <y>245</y>
+      <y>300</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -402,7 +465,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>240</y>
+      <y>295</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -415,7 +478,7 @@
     <property name="geometry">
      <rect>
       <x>528</x>
-      <y>245</y>
+      <y>300</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -436,7 +499,7 @@
     <property name="geometry">
      <rect>
       <x>586</x>
-      <y>294</y>
+      <y>349</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -449,7 +512,7 @@
     <property name="geometry">
      <rect>
       <x>360</x>
-      <y>340</y>
+      <y>395</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -462,7 +525,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>340</y>
+      <y>395</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -475,7 +538,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>392</y>
+      <y>447</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -496,7 +559,7 @@
     <property name="geometry">
      <rect>
       <x>469</x>
-      <y>294</y>
+      <y>349</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -509,7 +572,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>340</y>
+      <y>395</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -522,7 +585,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>290</y>
+      <y>345</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -535,7 +598,7 @@
     <property name="geometry">
      <rect>
       <x>528</x>
-      <y>441</y>
+      <y>496</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -548,7 +611,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>390</y>
+      <y>445</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -561,7 +624,7 @@
     <property name="geometry">
      <rect>
       <x>528</x>
-      <y>343</y>
+      <y>398</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -574,7 +637,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>290</y>
+      <y>345</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -587,7 +650,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>290</y>
+      <y>345</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -600,7 +663,7 @@
     <property name="geometry">
      <rect>
       <x>469</x>
-      <y>392</y>
+      <y>447</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -613,7 +676,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>245</y>
+      <y>300</y>
       <width>47</width>
       <height>32</height>
      </rect>
@@ -633,7 +696,7 @@
     <property name="geometry">
      <rect>
       <x>380</x>
-      <y>440</y>
+      <y>495</y>
       <width>61</width>
       <height>41</height>
      </rect>
@@ -646,7 +709,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>340</y>
+      <y>395</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -659,7 +722,7 @@
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>440</y>
+      <y>495</y>
       <width>70</width>
       <height>41</height>
      </rect>
@@ -672,7 +735,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>440</y>
+      <y>495</y>
       <width>70</width>
       <height>41</height>
      </rect>
@@ -685,7 +748,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>294</y>
+      <y>349</y>
       <width>47</width>
       <height>32</height>
      </rect>
