--- a/UTComputer/views/programdialog.ui
+++ b/UTComputer/views/programdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>369</height>
+    <width>464</width>
+    <height>446</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>330</y>
+     <x>110</x>
+     <y>400</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -33,19 +33,19 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
-     <width>131</width>
-     <height>221</height>
+     <y>100</y>
+     <width>171</width>
+     <height>191</height>
     </rect>
    </property>
   </widget>
   <widget class="QTextEdit" name="textEdit">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>10</y>
-     <width>241</width>
-     <height>221</height>
+     <x>200</x>
+     <y>100</y>
+     <width>251</width>
+     <height>191</height>
     </rect>
    </property>
   </widget>
@@ -53,39 +53,102 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>250</y>
-     <width>131</width>
+     <y>310</y>
+     <width>271</width>
      <height>25</height>
     </rect>
    </property>
    <property name="placeholderText">
-    <string>Nom du programme</string>
+    <string>Program name</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonCreateProgram">
    <property name="geometry">
     <rect>
-     <x>145</x>
-     <y>245</y>
+     <x>310</x>
+     <y>305</y>
      <width>141</width>
      <height>38</height>
     </rect>
    </property>
    <property name="text">
-    <string>Créer programme</string>
+    <string>Create program</string>
    </property>
   </widget>
   <widget class="QTextEdit" name="textEditError">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>280</y>
-     <width>271</width>
-     <height>31</height>
+     <y>340</y>
+     <width>431</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="readOnly">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>10</y>
+     <width>91</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Calibri</family>
+     <pointsize>18</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Programs</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>80</y>
+     <width>131</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>List of Programs</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>80</y>
+     <width>131</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Program value</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>30</y>
+     <width>431</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>A program is a list of postfix instructions separated by spaces, \t or \n</string>
    </property>
   </widget>
  </widget>
